syntax = "proto3";

package fileServicePackage;

service FileService {
  rpc UploadFile (UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile (DownloadFileRequest) returns (DownloadFileResponse);
}

message UploadFileRequest {
  string filename = 1;
}

message UploadFileResponse {
  string message = 1;
  bytes data = 2;
}

message DownloadFileRequest {
  string filename = 1;
}

message DownloadFileResponse {
  string message = 1;
  bytes data = 2;
}
